buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.14'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'kr.co.flower.blooming'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	
	// querydsl 디펜던시 추가
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
    implementation "com.querydsl:querydsl-apt:${queryDslVersion}" 
    
    // pdf
	implementation 'com.itextpdf:itextpdf:5.5.13.3'
	implementation 'com.itextpdf.tool:xmlworker:5.5.13.3'
	implementation 'com.itextpdf:pdfa:7.2.3'
	
	// swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
	
	// quartz
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
    
    // cron utils
	// https://github.com/jmrozanec/cron-utils
	implementation 'com.cronutils:cron-utils:9.2.1'
    
    // batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    
    // mysql
    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
    
    // validation
    implementation "org.springframework.boot:spring-boot-starter-validation"
	
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

// querydsl 빌드 경로 변수

def querydslDir = "$buildDir/generated/querydsl"

querydsl {
    jpa = true
    querydslSourcesDir = querydslDir
}

sourceSets {
    main.java.srcDir querydslDir
}

compileQuerydsl {
    options.annotationProcessorPath = configurations.querydsl
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    querydsl.extendsFrom compileClasspath
}